--- a/website_template/_site.yml
+++ b/website_template/_site.yml
@@ -10,4 +10,5 @@ navbar:
     - icon: fa-github fa-lg
       href: https://github.com/steveshin31/p8105_final_project
 output:
-  html_document
+  html_document:
+    theme: yeti 
